--- a/Block II - Nonparametric inference/NPS-lab06_Permutation_CI_and_Bootstrap.Rmd
+++ b/Block II - Nonparametric inference/NPS-lab06_Permutation_CI_and_Bootstrap.Rmd
@@ -131,7 +131,7 @@ perm_wrapper <- function(grid_point) {
   uni_t_perm(data, grid_point, B = 2000)  # run a permutational t test where the hypothesised mean is the grid_point
 }
 
-pval_function <- pbsapply(grid, perm_wrapper) # TODO
+pval_function <- pbsapply(grid, perm_wrapper, cl=cl) # TODO
 ```
 
 ```{r}
